<resources>

    <string name="app_name">Sweng2012QuizApp</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_show_questions">ShowQuestionsActivity</string>
    <string name="next_question">Next question</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="incorrect">Incorrect</string>
    <string name="noRate">You have not rated this question</string>
    <string name="title_activity_edit_question">EditQuestionActivity</string>
    <string name="question">Type in the question\'s text body</string>
    <string name="add_answer">\u002B</string>
    <string name="tags">Type in the question\'s tags</string>
    <string name="submit">Submit</string>
    <string name="answer_hint">Type in the answer</string>
    <string name="default_answer_mark">\u2718</string>
    <string name="remove_answer">\u002D</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="submit_question">Submit quiz question</string>
    <string name="show_question">Show a random question</string>
    <string name="take_quiz">Take a Quiz</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="username">GASPAR Username</string>
    <string name="password">GASPAR Password</string>
    <string name="login">Log in using Tequila</string>
    <string name="logout">Log out</string>
    <string name="title_activity_show_available_quizzes">ShowAvailableQuizzesActivity</string>
    <string name="title_activity_show_quiz">ShowQuizActivity</string>
    <string name="next">Next question</string>
    <string name="previous">Previous question</string>
    <string name="offline">Offline mode</string>
    <string name="hand_in_quiz">Hand in quiz</string>

</resources>