<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:orientation="horizontal" >

    <EditText
        android:id="@+id/response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/answer_hint" />

    <Button
        android:id="@+id/markAs"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/default_answer_mark"
        android:onClick="markAs"/>
 

    <Button
        android:id="@+id/removeAnswer"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:onClick="removeAnswer"
        android:text="@string/remove_answer" />

</LinearLayout>